@@ -1,4 +1,5 @@
 2.2.0   - Added handler for incorrect use of SEND and WAITFOR together in the same command.
+        - Added the ability to pause a Job indefinitely from within a Command Set.
 2.1.1   - Fixed formatting on command line help outputs on job receiver and executor.
 2.1.0   - Fixed dropdown in Command Sets that didn't adhere to new owner display system.
         - Changed a few icons for clarity.
